--- a/frontend/admin/pembayaran.html
+++ b/frontend/admin/pembayaran.html
@@ -192,9 +192,9 @@
         </div>
       </div> -->
 
-        <div class="card-body">
-          <table class="table table-bordered">
-            <thead class="table-light">
+        <div class="table-responsive mt-2 ms-3 me-3" style="max-height: 450px">
+          <table class="table table-bordered table-hover table-sm mb-0">
+            <thead class="thead-telur-asin">
               <tr>
                 <th>No</th>
                 <th>Nama Peserta</th>
@@ -211,6 +211,53 @@
             <tbody id="tablePembayaran"></tbody>
           </table>
         </div>
+        <div
+          class="card-footer d-flex justify-content-between align-items-center"
+        >
+          <div id="infoData" class="text-muted"></div>
+          <div>
+            <button class="btn btn-outline-secondary btn-sm" id="prevBtn">
+              Previous
+            </button>
+            <button class="btn btn-outline-secondary btn-sm" id="nextBtn">
+              Next
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- MODAL PREVIEW FILE -->
+    <div class="modal fade" id="modalPreviewFile" tabindex="-1">
+      <div
+        class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable"
+      >
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="modalPreviewTitle">Preview File</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+            ></button>
+          </div>
+
+          <div class="modal-body text-center">
+            <!-- PDF / IMAGE -->
+            <iframe
+              id="previewFrame"
+              src=""
+              style="width: 100%; height: 70vh; border: none; display: none"
+            ></iframe>
+
+            <img
+              id="previewImage"
+              src=""
+              class="img-fluid rounded"
+              style="display: none"
+            />
+          </div>
+        </div>
       </div>
     </div>
 
@@ -218,7 +265,20 @@
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         const API = "http://localhost:5000/api/pembayaran";
+
         let allData = [];
+        let filteredData = [];
+        let currentPage = 1;
+        const rowsPerPage = 5;
+
+        const tableBody = document.getElementById("tablePembayaran");
+        const infoData = document.getElementById("infoData");
+        const prevBtn = document.getElementById("prevBtn");
+        const nextBtn = document.getElementById("nextBtn");
+
+        const searchInput = document.getElementById("searchPembayaran");
+        const filterPelatihan = document.getElementById("filterPelatihan");
+        const filterStatus = document.getElementById("filterStatus");
 
         // ================================
         // HEADER IDENTITAS ADMIN (WAJIB)
@@ -233,14 +293,10 @@
         // PRIORITAS STATUS PEMBAYARAN
         // ================================
         const statusPriority = {
-          PENDING: 1, // butuh aksi admin
-          INVALID: 2, // perlu perhatian
-          VALID: 3, // sudah selesai
+          PENDING: 1,
+          INVALID: 2,
+          VALID: 3,
         };
-
-        const tableBody = document.getElementById("tablePembayaran");
-        const pelatihan = document.getElementById("filterPelatihan")?.value;
-        const status = document.getElementById("filterStatus")?.value;
 
         // =====================================================
         // LOAD DROPDOWN FILTER PELATIHAN
@@ -271,34 +327,74 @@
         // LOAD DATA PEMBAYARAN
         // =====================================================
         async function loadPembayaran() {
-          const res = await fetch(API);
-          allData = await res.json();
-          renderTable(allData);
+          try {
+            const res = await fetch(API);
+            if (!res.ok) throw new Error("API error");
+
+            const json = await res.json();
+            allData = Array.isArray(json) ? json : [];
+            applyAllFilter();
+          } catch (err) {
+            console.error(err);
+            alert("Gagal memuat data pembayaran");
+          }
+        }
+
+        /* ========== FILTER + SEARCH (SATU PINTU) ========== */
+        function applyAllFilter() {
+          const keyword = searchInput.value.toLowerCase().trim();
+
+          filteredData = allData.filter((item) => {
+            const matchSearch =
+              !keyword ||
+              item.nama_peserta?.toLowerCase().includes(keyword) ||
+              item.email?.toLowerCase().includes(keyword) ||
+              item.no_wa?.toLowerCase().includes(keyword) ||
+              item.nama_pelatihan?.toLowerCase().includes(keyword);
+
+            const matchPelatihan =
+              !filterPelatihan.value ||
+              item.id_pelatihan == filterPelatihan.value;
+
+            const matchStatus =
+              !filterStatus.value || item.status_bayar === filterStatus.value;
+
+            return matchSearch && matchPelatihan && matchStatus;
+          });
+
+          currentPage = 1;
+          renderTable();
         }
 
         // =====================================================
         // RENDER TABLE (ARRAY)
         // =====================================================
-        function renderTable(data) {
+        function renderTable() {
           tableBody.innerHTML = "";
 
-          if (data.length === 0) {
+          if (filteredData.length === 0) {
             tableBody.innerHTML = `
-                  <tr>
-                    <td colspan="13" class="text-center text-muted">
-                      Data tidak ditemukan
-                    </td>
-                  </tr>`;
+              <tr>
+                <td colspan="9" class="text-center text-muted">
+                  Data tidak ditemukan
+                </td>
+              </tr>`;
+            infoData.innerText = "Showing 0 entries";
+            prevBtn.disabled = nextBtn.disabled = true;
             return;
           }
 
-          const sorted = [...data].sort((a, b) => {
-            const pa = statusPriority[a.status_bayar] || 99;
-            const pb = statusPriority[b.status_bayar] || 99;
-            return pa - pb;
-          });
+          const sortedData = [...filteredData].sort(
+            (a, b) =>
+              (statusPriority[a.status_bayar] || 99) -
+              (statusPriority[b.status_bayar] || 99)
+          );
 
-          sorted.forEach((item, index) => {
+          const start = (currentPage - 1) * rowsPerPage;
+          const end = start + rowsPerPage;
+          const pageData = sortedData.slice(start, end);
+
+          pageData.forEach((item, index) => {
             const badgeClass =
               item.status_bayar === "PENDING"
                 ? "warning"
@@ -320,11 +416,18 @@
 
 
                 <td>
-                  <a href="http://localhost:5000/uploads/bukti_transfer/${
+                  ${
                     item.bukti_transfer
-                  }"
-                     target="_blank"
-                     class="btn btn-sm btn-secondary">Lihat</a>
+                      ? `<button
+                          class="btn btn-sm btn-secondary"
+                          onclick="openPreview(
+                            'Bukti Transfer',
+                            'http://localhost:5000/uploads/bukti_transfer/${item.bukti_transfer}'
+                          )">
+                          Lihat
+                        </button>`
+                      : "-"
+                  }
                 </td>
 
                 <td>
@@ -363,31 +466,35 @@
               </tr>
             `;
           });
+
+          infoData.innerText = `Showing ${start + 1} to ${Math.min(
+            end,
+            filteredData.length
+          )} of ${filteredData.length} entries`;
+
+          prevBtn.disabled = currentPage === 1;
+          nextBtn.disabled = end >= filteredData.length;
         }
 
-        // =====================================================
-        // FILTER LOGIC (AUTO REFRESH)
-        // =====================================================
-        function applyFilter() {
-          let filtered = [...allData];
-
-          if (filterPelatihan.value) {
-            filtered = filtered.filter(
-              (d) => d.id_pelatihan == filterPelatihan.value
-            );
+        /* ================= PAGINATION ================= */
+        prevBtn.onclick = () => {
+          if (currentPage > 1) {
+            currentPage--;
+            renderTable();
           }
+        };
 
-          if (filterStatus.value) {
-            filtered = filtered.filter(
-              (d) => d.status_bayar === filterStatus.value
-            );
+        nextBtn.onclick = () => {
+          if (currentPage * rowsPerPage < filteredData.length) {
+            currentPage++;
+            renderTable();
           }
+        };
 
-          renderTable(filtered);
-        }
-
-        filterPelatihan.addEventListener("change", applyFilter);
-        filterStatus.addEventListener("change", applyFilter);
+        /* ================= EVENT ================= */
+        searchInput.addEventListener("input", applyAllFilter);
+        filterPelatihan.addEventListener("change", applyAllFilter);
+        filterStatus.addEventListener("change", applyAllFilter);
 
         // =====================================================
         // EXPORT EXCEL PEMBAYARAN (FILTERED)
@@ -438,6 +545,36 @@
           loadPembayaran();
         };
 
+        // ===============================
+        // PREVIEW FILE (IMAGE / PDF)
+        // ===============================
+        window.openPreview = (title, url) => {
+          const modalEl = document.getElementById("modalPreviewFile");
+          const modalTitle = document.getElementById("modalPreviewTitle");
+          const iframe = document.getElementById("previewFrame");
+          const img = document.getElementById("previewImage");
+
+          modalTitle.innerText = title;
+
+          // reset tampilan
+          iframe.style.display = "none";
+          img.style.display = "none";
+          iframe.src = "";
+          img.src = "";
+
+          // cek ekstensi file
+          if (/\.(jpg|jpeg|png)$/i.test(url)) {
+            img.src = url;
+            img.style.display = "block";
+          } else {
+            iframe.src = url;
+            iframe.style.display = "block";
+          }
+
+          const modal = new bootstrap.Modal(modalEl);
+          modal.show();
+        };
+
         // DELETE
         window.hapus = async (id) => {
           if (!confirm("Hapus pembayaran ini?")) return;
@@ -447,19 +584,6 @@
           loadPembayaran();
         };
 
-        // LIVE SEARCH
-        document
-          .getElementById("searchPembayaran")
-          .addEventListener("input", function () {
-            const keyword = this.value.toLowerCase();
-            document.querySelectorAll("#tablePembayaran tr").forEach((row) => {
-              row.style.display = row.innerText.toLowerCase().includes(keyword)
-                ? ""
-                : "none";
-            });
-          });
-
-        loadFilterPelatihan();
         loadPembayaran();
       });
     </script>
