--- a/frontend/admin/pendaftaran.html
+++ b/frontend/admin/pendaftaran.html
@@ -183,18 +183,25 @@
         </div>
         <!-- Export EXCEELL -->
 
-        <div class="col-md-4 mt-3 ms-3">
+        <!-- Search Bar -->
+        <div class="col-md-4 mt-2 ms-3 mb-4 text-end">
+          <i class="bi bi-search search-icon"></i>
+
           <input
             type="text"
-            id="searchPendaftaran"
+            id="searchInput"
             placeholder="Cari..."
-            class="form-control"
+            class="form-control search-input ps-4"
           />
         </div>
 
-        <div class="card-body">
-          <table class="table table-bordered">
-            <thead class="table-light">
+        <!-- Tabel Pendaftar Pelatihan -->
+        <div
+          class="table-responsive ms-3 me-3"
+          style="max-height: 450px; overflow-y: auto"
+        >
+          <table class="table table-bordered table-hover table-sm mb-0">
+            <thead class="thead-telur-asin">
               <tr>
                 <th>No</th>
                 <th>Nama Peserta</th>
@@ -215,6 +222,59 @@
             <tbody id="tablePendaftaran"></tbody>
           </table>
         </div>
+
+        <!-- FOOTER PAGINATION -->
+        <div
+          class="card-footer d-flex justify-content-between align-items-center px-3 py-2"
+        >
+          <!-- INFO DATA -->
+          <div id="infoData" class="text-muted small">Menampilkan 0 data</div>
+
+          <!-- NAVIGATION -->
+          <div class="d-flex gap-2">
+            <button class="btn btn-outline-secondary btn-sm" id="prevBtn">
+              ‹ Previous
+            </button>
+
+            <button class="btn btn-outline-secondary btn-sm" id="nextBtn">
+              Next ›
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- MODAL PREVIEW FILE -->
+    <div class="modal fade" id="modalPreviewFile" tabindex="-1">
+      <div
+        class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable"
+      >
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="modalPreviewTitle">Preview File</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+            ></button>
+          </div>
+
+          <div class="modal-body text-center">
+            <!-- PDF / IMAGE -->
+            <iframe
+              id="previewFrame"
+              src=""
+              style="width: 100%; height: 70vh; border: none; display: none"
+            ></iframe>
+
+            <img
+              id="previewImage"
+              src=""
+              class="img-fluid rounded"
+              style="display: none"
+            />
+          </div>
+        </div>
       </div>
     </div>
 
@@ -222,7 +282,22 @@
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         const API = "http://localhost:5000/api/pendaftaran";
+
         let allData = [];
+        let filteredData = [];
+        let currentPage = 1;
+        const rowsPerPage = 5;
+
+        const tableBody = document.getElementById("tablePendaftaran");
+        const infoData = document.getElementById("infoData");
+        const prevBtn = document.getElementById("prevBtn");
+        const nextBtn = document.getElementById("nextBtn");
+
+        const searchInput = document.getElementById("searchInput");
+        const filterPelatihan = document.getElementById("filterPelatihan");
+        const filterNama = document.getElementById("filterNama");
+        const filterStatus = document.getElementById("filterStatus");
+        const tanggalMulai = document.getElementById("tanggalMulai");
 
         // ================================
         // HEADER IDENTITAS ADMIN
@@ -248,11 +323,63 @@
           "Diterima",
         ];
 
-        const tableBody = document.getElementById("tablePendaftaran");
-        const filterPelatihan = document.getElementById("filterPelatihan");
-        const filterNama = document.getElementById("filterNama");
-        const filterStatus = document.getElementById("filterStatus");
-        const tanggalMulai = document.getElementById("tanggalMulai");
+        // ==========================================
+        // LOAD DATA PENDAFTARAN
+        // ==========================================
+        async function loadPendaftaran() {
+          try {
+            const res = await fetch(API);
+            const data = await res.json();
+
+            allData = Array.isArray(data) ? data : [];
+            applyAllFilter();
+          } catch {
+            alert("Server tidak merespons");
+          }
+        }
+
+        // ================= FILTER + SEARCH (SATU PINTU) =================
+        function applyAllFilter() {
+          const keyword = searchInput.value.toLowerCase().trim();
+
+          filteredData = allData.filter((item) => {
+            const matchSearch =
+              !keyword ||
+              item.nama_peserta?.toLowerCase().includes(keyword) ||
+              item.nik?.toLowerCase().includes(keyword) ||
+              item.email?.toLowerCase().includes(keyword) ||
+              item.no_wa?.toLowerCase().includes(keyword) ||
+              item.nama_pelatihan?.toLowerCase().includes(keyword);
+
+            const matchPelatihan =
+              !filterPelatihan.value ||
+              item.id_pelatihan == filterPelatihan.value;
+
+            const matchStatus =
+              !filterStatus.value || item.status === filterStatus.value;
+
+            const matchNama =
+              !filterNama.value ||
+              item.nama_peserta
+                .toLowerCase()
+                .includes(filterNama.value.toLowerCase());
+
+            const matchTanggal =
+              !tanggalMulai.value ||
+              item.tanggal_daftar.split("T")[0] >= tanggalMulai.value;
+
+            return (
+              matchSearch &&
+              matchPelatihan &&
+              matchStatus &&
+              matchNama &&
+              matchTanggal
+            );
+          });
+
+          currentPage = 1;
+          renderTable();
+        }
 
         // =====================================================
         // LOAD DROPDOWN FILTER PELATIHAN
@@ -279,54 +406,39 @@
           }
         }
 
-        // ==========================================
-        // LOAD DATA PENDAFTARAN
-        // ==========================================
-        async function loadPendaftaran() {
-          try {
-            const res = await fetch(API);
-            const data = await res.json();
-
-            if (!res.ok || !Array.isArray(data)) {
-              console.error("API Error:", data);
-              alert("Gagal mengambil data pendaftaran.");
-              return;
-            }
-
-            allData = data;
-            renderTable(allData);
-          } catch (err) {
-            console.error("Fetch error:", err);
-            alert("Server tidak merespons.");
-          }
-        }
-
         // =====================================================
         // RENDER TABLE (ARRAY)
         // =====================================================
-        function renderTable(data) {
+        function renderTable() {
           tableBody.innerHTML = "";
 
-          if (data.length === 0) {
+          // safety
+          if (!Array.isArray(filteredData) || filteredData.length === 0) {
             tableBody.innerHTML = `
-            <tr>
-              <td colspan="13" class="text-center text-muted">
-                Data tidak ditemukan
-              </td>
-            </tr>`;
+              <tr>
+                <td colspan="13" class="text-center text-muted">
+                  Data tidak ditemukan
+                </td>
+              </tr>`;
+            infoData.innerText = "Showing 0 entries";
+            prevBtn.disabled = true;
+            nextBtn.disabled = true;
             return;
           }
 
-          // ================================
-          // SORT BERDASARKAN PRIORITAS STATUS
-          // ================================
-          const sorted = [...data].sort((a, b) => {
+          const start = (currentPage - 1) * rowsPerPage;
+          const end = start + rowsPerPage;
+
+          // SORT DULU, BARU PAGINATION
+          const sortedData = [...filteredData].sort((a, b) => {
             const pa = statusPriority[a.status] || 99;
             const pb = statusPriority[b.status] || 99;
             return pa - pb;
           });
 
-          sorted.forEach((item, index) => {
+          const pageData = sortedData.slice(start, end);
+
+          pageData.forEach((item, index) => {
             const badgeClass =
               item.status === "Menunggu Verifikasi Berkas"
                 ? "warning"
@@ -334,14 +446,12 @@
                 ? "danger"
                 : item.status === "Menunggu Pembayaran"
                 ? "primary"
-                : item.status === "Verifikasi Pembayaran Invalid"
-                ? "danger"
                 : item.status === "Diterima"
                 ? "success"
                 : "secondary";
 
             tableBody.innerHTML += `
-                <tr>
+            <tr>
                   <td>${index + 1}</td>
                   <td>${item.nama_peserta}</td>
                   <td>${item.nik}</td>
@@ -355,7 +465,14 @@
                   <td>
                     ${
                       item.surat_tugas
-                        ? `<a href="http://localhost:5000/uploads/surat_tugas/${item.surat_tugas}" target="_blank" class="btn btn-sm btn-secondary">Lihat</a>`
+                        ? `<button
+                            class="btn btn-sm btn-secondary"
+                            onclick="openPreview(
+                              'Surat Tugas',
+                              'http://localhost:5000/uploads/surat_tugas/${item.surat_tugas}'
+                            )">
+                            Lihat
+                          </button>`
                         : "-"
                     }
                   </td>
@@ -363,7 +480,14 @@
                   <td>
                     ${
                       item.foto_4x6
-                        ? `<a href="http://localhost:5000/uploads/foto_4x6/${item.foto_4x6}" target="_blank" class="btn btn-sm btn-secondary">Lihat</a>`
+                        ? `<button
+                            class="btn btn-sm btn-secondary"
+                            onclick="openPreview(
+                              'Foto 4x6',
+                              'http://localhost:5000/uploads/foto_4x6/${item.foto_4x6}'
+                            )">
+                            Lihat
+                          </button>`
                         : "-"
                     }
                   </td>
@@ -400,49 +524,68 @@
                     </button>
                   </td>
 
-                </tr>
-              `;
+                </tr>`;
           });
+
+          infoData.innerText = `Showing ${start + 1} to ${Math.min(
+            end,
+            filteredData.length
+          )} of ${filteredData.length} entries`;
+
+          prevBtn.disabled = currentPage === 1;
+          nextBtn.disabled = end >= filteredData.length;
         }
 
-        // =====================================================
-        // FILTER LOGIC (AUTO REFRESH)
-        // =====================================================
-        function applyFilter() {
-          let filtered = [...allData];
+        // ======================
+        // PAGINATION BUTTON
+        // ======================
+        prevBtn.onclick = () => {
+          if (currentPage > 1) {
+            currentPage--;
+            renderTable();
+          }
+        };
 
-          if (filterPelatihan.value) {
-            filtered = filtered.filter(
-              (d) => d.id_pelatihan == filterPelatihan.value
-            );
+        nextBtn.onclick = () => {
+          if (currentPage * rowsPerPage < filteredData.length) {
+            currentPage++;
+            renderTable();
+          }
+        };
+
+        searchInput.addEventListener("input", applyAllFilter);
+        filterPelatihan.addEventListener("change", applyAllFilter);
+        filterNama.addEventListener("input", applyAllFilter);
+        filterStatus.addEventListener("change", applyAllFilter);
+        tanggalMulai.addEventListener("change", applyAllFilter);
+
+        // Buka File Modal
+        window.openPreview = (title, url) => {
+          const iframe = document.getElementById("previewFrame");
+          const img = document.getElementById("previewImage");
+          const modalTitle = document.getElementById("modalPreviewTitle");
+
+          modalTitle.innerText = title;
+
+          // reset
+          iframe.style.display = "none";
+          img.style.display = "none";
+          iframe.src = "";
+          img.src = "";
+
+          // cek tipe file
+          if (url.match(/\.(jpg|jpeg|png)$/i)) {
+            img.src = url;
+            img.style.display = "block";
+          } else {
+            iframe.src = url;
+            iframe.style.display = "block";
           }
 
-          if (filterNama.value) {
-            filtered = filtered.filter((d) =>
-              d.nama_peserta
-                .toLowerCase()
-                .includes(filterNama.value.toLowerCase())
-            );
-          }
-
-          if (filterStatus.value) {
-            filtered = filtered.filter((d) => d.status === filterStatus.value);
-          }
-
-          if (tanggalMulai.value) {
-            filtered = filtered.filter((d) => {
-              const tgl = d.tanggal_daftar.split(" ")[0];
-              return tgl >= tanggalMulai.value;
-            });
-          }
-
-          renderTable(filtered);
-        }
-
-        filterPelatihan.addEventListener("change", applyFilter);
-        filterNama.addEventListener("input", applyFilter);
-        filterStatus.addEventListener("change", applyFilter);
-        tanggalMulai.addEventListener("change", applyFilter);
+          new bootstrap.Modal(
+            document.getElementById("modalPreviewFile")
+          ).show();
+        };
 
         // =====================================================
         // DELETE PENDAFTARAN
@@ -481,60 +624,6 @@
           alert(data.message);
           loadPendaftaran();
         };
-
-        // =====================================================
-        // LIVE SEARCH
-        // =====================================================
-        document
-          .getElementById("searchPendaftaran")
-          .addEventListener("input", function () {
-            const keyword = this.value.toLowerCase();
-            document.querySelectorAll("#tablePendaftaran tr").forEach((row) => {
-              row.style.display = row.innerText.toLowerCase().includes(keyword)
-                ? ""
-                : "none";
-            });
-          });
-
-        // ==========================================
-        // FILTER LOGIC (AUTO REFRESH)
-        // ==========================================
-        function applyFilter() {
-          let filtered = [...allData];
-
-          if (filterPelatihan.value) {
-            filtered = filtered.filter(
-              (d) => d.id_pelatihan == filterPelatihan.value
-            );
-          }
-
-          if (filterNama.value) {
-            filtered = filtered.filter((d) =>
-              d.nama_peserta
-                .toLowerCase()
-                .includes(filterNama.value.toLowerCase())
-            );
-          }
-
-          if (filterStatus.value) {
-            filtered = filtered.filter((d) => d.status === filterStatus.value);
-          }
-
-          if (tanggalMulai.value) {
-            filtered = filtered.filter((d) => {
-              const tgl = d.tanggal_daftar.split("T")[0];
-              return tgl >= tanggalMulai.value;
-            });
-          }
-
-          renderTable(filtered);
-        }
-
-        // EVENT LISTENER AUTO REFRESH
-        filterPelatihan.addEventListener("change", applyFilter);
-        filterNama.addEventListener("input", applyFilter);
-        filterStatus.addEventListener("change", applyFilter);
-        tanggalMulai.addEventListener("change", applyFilter);
 
         // =====================================================
         // EXPORT EXCEL (FILTERED)
