--- a/frontend/menupelatihan.html
+++ b/frontend/menupelatihan.html
@@ -580,24 +580,26 @@
                 <!-- End Department Card -->
               </div>
 
-              <div class="services-cta" data-aos="fade-up" data-aos-delay="400">
-                <div class="row">
-                  <div class="col-lg-8 mx-auto text-center">
-                    <div class="cta-content">
-                      <i class="bi bi-journal-bookmark-fill"></i>
-                      <!-- <i class="fa fa-calendar-check"></i> -->
-                      <h3>Siapkah Anda Meningkatkan Kompetensi?</h3>
-                      <p>
-                        Daftar pelatihan sekarang dengan klik tombol Daftar Pelatihan
-                      </p>
-                      <div class="cta-buttons">
-                        <a href="daftarpelatihan.html" class="btn-book">Daftar Pelatihan</a>
-                        <a href="contact.html" class="btn-contact">Kontak Kami</a>
+              <section>
+                <div class="services-cta" data-aos="fade-up" data-aos-delay="400">
+                  <div class="row">
+                    <div class="col-lg-8 mx-auto text-center">
+                      <div class="cta-content">
+                        <i class="bi bi-journal-bookmark-fill"></i>
+                        <!-- <i class="fa fa-calendar-check"></i> -->
+                        <h3>Siapkah Anda Meningkatkan Kompetensi?</h3>
+                        <p>
+                          Daftar pelatihan sekarang dengan klik tombol Daftar Pelatihan
+                        </p>
+                        <div class="cta-buttons">
+                          <a href="daftarpelatihan.html" class="btn-book">Daftar Pelatihan</a>
+                          <a href="contact.html" class="btn-contact">Kontak Kami</a>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
-              </div>
+              </section>
             </div>
           </section>
         </section>
