--- a/frontend/admin/fasilitator.html
+++ b/frontend/admin/fasilitator.html
@@ -139,64 +139,11 @@
     <div class="container py-4">
       <h2 class="fw-bold mb-4">👤 Kelola Fasilitator</h2>
 
-      <!-- FORM TAMBAH FASILITATOR -->
-      <div class="card mb-4">
-        <div class="card-header bg-dark text-white">Tambah Fasilitator</div>
-
-        <div class="card-body">
-          <form id="formFasilitator">
-            <div class="row g-3">
-              <div class="col-md-6">
-                <label class="form-label">Nama Fasilitator *</label>
-                <input type="text" name="nama" class="form-control" required />
-              </div>
-
-              <div class="col-md-6">
-                <label class="form-label">Status</label>
-                <select name="status" class="form-control">
-                  <option value="1">Aktif</option>
-                  <option value="0">Nonaktif</option>
-                </select>
-              </div>
-
-              <div class="col-md-12">
-                <label class="form-label">Keterangan</label>
-                <textarea name="keterangan" class="form-control"></textarea>
-              </div>
-
-              <div class="col-md-6">
-                <label class="form-label">Upload Foto *</label>
-                <input
-                  type="file"
-                  name="foto"
-                  class="form-control"
-                  accept="image/*"
-                  required
-                />
-
-                <img
-                  id="previewFoto"
-                  class="mt-2 border rounded"
-                  width="120"
-                  style="display: none"
-                />
-              </div>
-
-              <div class="col-md-12 text-end">
-                <button class="btn btn-primary mt-3">
-                  + Tambah Fasilitator
-                </button>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-
       <!-- TABLE FASILITATOR -->
       <div class="card">
         <div class="card-header bg-dark text-white">Daftar Fasilitator</div>
 
-        <div class="col-md-4 mt-3 ms-3">
+        <div class="col-md-4 mt-3 ms-3 mb-3">
           <input
             type="text"
             id="searchFasilitator"
@@ -205,9 +152,22 @@
           />
         </div>
 
-        <div class="card-body">
+        <div class="col-md-12">
+          <button
+            class="btn btn-primary mt-2 mb-2 ms-3"
+            data-bs-toggle="modal"
+            data-bs-target="#modalTambahFasilitator"
+          >
+            + Tambah Fasilitator
+          </button>
+        </div>
+
+        <div
+          class="table-responsive ms-3 me-3"
+          style="max-height: 450px; overflow-y: auto"
+        >
           <table class="table table-bordered">
-            <thead class="table-light">
+            <thead class="thead-telur-asin">
               <tr>
                 <th>No</th>
                 <th>Foto</th>
@@ -221,6 +181,212 @@
             <tbody id="tableFasilitator"></tbody>
           </table>
         </div>
+
+        <!-- FOOTER PAGINATION -->
+        <div
+          class="card-footer d-flex justify-content-between align-items-center"
+        >
+          <div id="infoData" class="text-muted"></div>
+          <div>
+            <button class="btn btn-outline-secondary btn-sm" id="prevBtn">
+              Previous
+            </button>
+            <button class="btn btn-outline-secondary btn-sm" id="nextBtn">
+              Next
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- MODAL TAMBAH FASILITATOR -->
+    <div
+      class="modal fade"
+      id="modalTambahFasilitator"
+      tabindex="-1"
+      aria-labelledby="modalTambahFasilitatorLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-lg modal-dialog-scrollable">
+        <div class="modal-content">
+          <!-- HEADER -->
+          <div class="modal-header bg-dark text-white">
+            <h5 class="modal-title" id="modalTambahFasilitatorLabel">
+              Tambah Fasilitator
+            </h5>
+            <button
+              type="button"
+              class="btn-close btn-close-white"
+              data-bs-dismiss="modal"
+            ></button>
+          </div>
+
+          <!-- BODY -->
+          <div class="modal-body">
+            <form id="formFasilitator">
+              <div class="row g-3">
+                <div class="col-md-6">
+                  <label class="form-label">Nama Fasilitator *</label>
+                  <input
+                    type="text"
+                    name="nama"
+                    class="form-control"
+                    required
+                  />
+                </div>
+
+                <div class="col-md-6">
+                  <label class="form-label">Status</label>
+                  <select name="status" class="form-control">
+                    <option value="1">Aktif</option>
+                    <option value="0">Nonaktif</option>
+                  </select>
+                </div>
+
+                <div class="col-md-12">
+                  <label class="form-label">Keterangan</label>
+                  <textarea
+                    name="keterangan"
+                    class="form-control"
+                    placeholder="Deskripsi singkat fasilitator"
+                  ></textarea>
+                </div>
+
+                <div class="col-md-6">
+                  <label class="form-label">Upload Foto *</label>
+                  <input
+                    type="file"
+                    name="foto"
+                    class="form-control"
+                    accept="image/*"
+                    required
+                  />
+
+                  <img
+                    id="previewFoto"
+                    class="mt-2 border rounded"
+                    style="max-width: 180px"
+                  />
+                </div>
+              </div>
+            </form>
+          </div>
+
+          <!-- FOOTER -->
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Batal
+            </button>
+            <button
+              type="submit"
+              form="formFasilitator"
+              class="btn btn-primary"
+            >
+              Simpan Fasilitator
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- MODAL EDIT FASILITATOR -->
+    <div
+      class="modal fade"
+      id="modalEditFasilitator"
+      tabindex="-1"
+      aria-labelledby="modalEditFasilitatorLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-lg modal-dialog-scrollable">
+        <div class="modal-content">
+          <!-- HEADER -->
+          <div class="modal-header bg-dark text-white">
+            <h5 class="modal-title" id="modalEditFasilitatorLabel">
+              Edit Fasilitator
+            </h5>
+            <button
+              type="button"
+              class="btn-close btn-close-white"
+              data-bs-dismiss="modal"
+            ></button>
+          </div>
+
+          <!-- BODY -->
+          <div class="modal-body">
+            <form id="formEditFasilitator">
+              <input type="hidden" id="edit_id" />
+
+              <div class="row g-3">
+                <div class="col-md-6">
+                  <label class="form-label">Nama Fasilitator *</label>
+                  <input
+                    type="text"
+                    id="edit_nama"
+                    name="nama"
+                    class="form-control"
+                    required
+                  />
+                </div>
+
+                <div class="col-md-6">
+                  <label class="form-label">Status</label>
+                  <select id="edit_status" name="status" class="form-control">
+                    <option value="1">Aktif</option>
+                    <option value="0">Nonaktif</option>
+                  </select>
+                </div>
+
+                <div class="col-md-12">
+                  <label class="form-label">Keterangan</label>
+                  <textarea
+                    id="edit_keterangan"
+                    name="keterangan"
+                    class="form-control"
+                  ></textarea>
+                </div>
+
+                <div class="col-md-6">
+                  <label class="form-label">Foto Baru (opsional)</label>
+                  <input
+                    type="file"
+                    id="edit_foto"
+                    name="foto"
+                    class="form-control"
+                    accept="image/*"
+                  />
+
+                  <img
+                    id="edit_previewFoto"
+                    class="mt-2 border rounded"
+                    style="max-width: 150px"
+                  />
+                </div>
+              </div>
+            </form>
+          </div>
+
+          <!-- FOOTER -->
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Batal
+            </button>
+            <button
+              type="submit"
+              form="formEditFasilitator"
+              class="btn btn-primary"
+            >
+              Simpan Perubahan
+            </button>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -228,8 +394,19 @@
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         const API = "http://localhost:5000/api/fasilitator";
+
+        let allData = [];
+        let filteredData = [];
+        let currentPage = 1;
+        const rowsPerPage = 5;
+
         const tableBody = document.getElementById("tableFasilitator");
         const form = document.getElementById("formFasilitator");
+
+        const infoData = document.getElementById("infoData");
+        const prevBtn = document.getElementById("prevBtn");
+        const nextBtn = document.getElementById("nextBtn");
+        const searchInput = document.getElementById("searchFasilitator");
 
         // PREVIEW FOTO
         const fotoInput = form.querySelector('input[name="foto"]');
@@ -243,14 +420,74 @@
           }
         });
 
-        // LOAD DATA
-        async function loadFasilitator() {
-          const res = await fetch(API);
-          const data = await res.json();
+        fotoInput.addEventListener("change", function () {
+          const file = this.files[0];
+          if (file) {
+            preview.src = URL.createObjectURL(file);
+            preview.style.display = "block";
+          }
+        });
 
+        // =========================
+        // LOAD DATA (ADMIN MODE)
+        // =========================
+        async function loadFasilitator() {
+          try {
+            const res = await fetch(`${API}?admin=1`);
+            const json = await res.json();
+
+            allData = Array.isArray(json) ? json : [];
+            applyFilter();
+          } catch (err) {
+            console.error(err);
+            tableBody.innerHTML = `
+        <tr>
+          <td colspan="6" class="text-center text-danger">
+            Gagal memuat data fasilitator
+          </td>
+        </tr>`;
+          }
+        }
+
+        // =========================
+        // FILTER + SEARCH
+        // =========================
+        function applyFilter() {
+          const keyword = searchInput.value.toLowerCase().trim();
+
+          filteredData = allData.filter(
+            (item) =>
+              !keyword ||
+              item.nama?.toLowerCase().includes(keyword) ||
+              item.keterangan?.toLowerCase().includes(keyword)
+          );
+
+          currentPage = 1;
+          renderTable();
+        }
+
+        // RENDER TABLE
+        function renderTable() {
           tableBody.innerHTML = "";
 
-          data.forEach((item, index) => {
+          if (filteredData.length === 0) {
+            tableBody.innerHTML = `
+        <tr>
+          <td colspan="6" class="text-center text-muted">
+            Data tidak ditemukan
+          </td>
+        </tr>`;
+
+            infoData.innerText = "Showing 0 entries";
+            prevBtn.disabled = nextBtn.disabled = true;
+            return;
+          }
+
+          const start = (currentPage - 1) * rowsPerPage;
+          const end = start + rowsPerPage;
+          const pageData = filteredData.slice(start, end);
+
+          pageData.forEach((item, index) => {
             tableBody.innerHTML += `
               <tr>
                 <td>${index + 1}</td>
@@ -268,9 +505,10 @@
                   </span>
                 </td>
                 <td>
-                  <button class="btn btn-warning btn-sm" onclick="window.location.href='editfasilitator.html?id=${
+                  <button class="btn btn-warning btn-sm" onclick="openEditFasilitator(${
                     item.id_fasilitator
-                  }'">Edit</button>
+                  })"
+                    >Edit</button>
                   <button class="btn btn-danger btn-sm" onclick="hapusFasilitator(${
                     item.id_fasilitator
                   })">Hapus</button>
@@ -278,9 +516,32 @@
               </tr>
             `;
           });
+
+          infoData.innerText = `Showing ${start + 1} to ${Math.min(
+            end,
+            filteredData.length
+          )} of ${filteredData.length} entries`;
+
+          prevBtn.disabled = currentPage === 1;
+          nextBtn.disabled = end >= filteredData.length;
         }
 
-        loadFasilitator();
+        // =========================
+        // PAGINATION
+        // =========================
+        prevBtn.onclick = () => {
+          if (currentPage > 1) {
+            currentPage--;
+            renderTable();
+          }
+        };
+
+        nextBtn.onclick = () => {
+          if (currentPage * rowsPerPage < filteredData.length) {
+            currentPage++;
+            renderTable();
+          }
+        };
 
         // CREATE
         form.addEventListener("submit", async (e) => {
@@ -288,20 +549,87 @@
 
           const formData = new FormData(form);
 
-          const res = await fetch(API, {
-            method: "POST",
-            body: formData,
-          });
+          try {
+            const res = await fetch(API, {
+              method: "POST",
+              body: formData,
+            });
 
-          const data = await res.json();
-          alert(data.message);
+            const data = await res.json();
+            alert(data.message);
 
-          if (res.ok) {
-            form.reset();
-            preview.style.display = "none";
-            loadFasilitator();
+            if (res.ok) {
+              form.reset();
+              preview.style.display = "none";
+
+              // tutup modal
+              bootstrap.Modal.getInstance(
+                document.getElementById("modalTambahFasilitator")
+              ).hide();
+
+              loadFasilitator(); // refresh tabel
+            }
+          } catch (err) {
+            alert("Gagal menambahkan fasilitator");
+            console.error(err);
           }
         });
+
+        // =========================
+        // OPEN EDIT MODAL
+        // =========================
+        window.openEditFasilitator = async (id) => {
+          try {
+            const res = await fetch(`${API}/${id}`);
+            const data = await res.json();
+
+            document.getElementById("edit_id").value = data.id_fasilitator;
+            document.getElementById("edit_nama").value = data.nama;
+            document.getElementById("edit_keterangan").value =
+              data.keterangan || "";
+            document.getElementById("edit_status").value = data.status;
+
+            document.getElementById(
+              "edit_previewFoto"
+            ).src = `http://localhost:5000/uploads/fasilitator/${data.foto}`;
+
+            new bootstrap.Modal(
+              document.getElementById("modalEditFasilitator")
+            ).show();
+          } catch (err) {
+            alert("Gagal memuat data fasilitator");
+            console.error(err);
+          }
+        };
+
+        // =========================
+        // SUBMIT EDIT FASILITATOR
+        // =========================
+        document
+          .getElementById("formEditFasilitator")
+          .addEventListener("submit", async (e) => {
+            e.preventDefault();
+
+            const id = document.getElementById("edit_id").value;
+            const formData = new FormData(
+              document.getElementById("formEditFasilitator")
+            );
+
+            const res = await fetch(`${API}/${id}`, {
+              method: "PUT",
+              body: formData,
+            });
+
+            const data = await res.json();
+            alert(data.message);
+
+            if (res.ok) {
+              bootstrap.Modal.getInstance(
+                document.getElementById("modalEditFasilitator")
+              ).hide();
+              loadFasilitator();
+            }
+          });
 
         // DELETE
         window.hapusFasilitator = async (id) => {
@@ -314,19 +642,12 @@
           loadFasilitator();
         };
 
-        // LIVE SEARCH
-        document
-          .getElementById("searchFasilitator")
-          .addEventListener("input", function () {
-            const keyword = this.value.toLowerCase();
-            const rows = document.querySelectorAll("#tableFasilitator tr");
+        // =========================
+        // EVENT
+        // =========================
+        searchInput.addEventListener("input", applyFilter);
 
-            rows.forEach((row) => {
-              row.style.display = row.innerText.toLowerCase().includes(keyword)
-                ? ""
-                : "none";
-            });
-          });
+        loadFasilitator();
       });
     </script>
     <script src="http://localhost:5000/static/admin_check.js"></script>
