--- a/frontend/admin/institusi.html
+++ b/frontend/admin/institusi.html
@@ -139,49 +139,6 @@
     <div class="container py-4">
       <h2 class="fw-bold mb-4">🏛️ Kelola Institusi Kerjasama</h2>
 
-      <!-- FORM TAMBAH INSTITUSI -->
-      <div class="card mb-4">
-        <div class="card-header bg-dark text-white">Tambah Institusi</div>
-
-        <div class="card-body">
-          <form id="formInstitusi">
-            <div class="row g-3">
-              <div class="col-md-6">
-                <label class="form-label">Nama Institusi *</label>
-                <input type="text" name="nama" class="form-control" required />
-              </div>
-
-              <div class="col-md-6">
-                <label class="form-label">Link Terkait</label>
-                <input type="text" name="link_terkait" class="form-control" />
-              </div>
-
-              <div class="col-md-6">
-                <label class="form-label">Upload Logo *</label>
-                <input
-                  type="file"
-                  name="foto"
-                  class="form-control"
-                  accept="image/*"
-                  required
-                />
-
-                <img
-                  id="previewFoto"
-                  class="mt-2 border rounded"
-                  width="120"
-                  style="display: none"
-                />
-              </div>
-
-              <div class="col-md-12 text-end">
-                <button class="btn btn-primary mt-3">+ Tambah Institusi</button>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-
       <!-- TABLE LIST -->
       <div class="card">
         <div class="card-header bg-dark text-white">Daftar Institusi</div>
@@ -195,9 +152,22 @@
           />
         </div>
 
-        <div class="card-body">
+        <div class="col-md-12">
+          <button
+            class="btn btn-primary mt-2 mb-2 ms-3"
+            data-bs-toggle="modal"
+            data-bs-target="#modalTambahInstitusi"
+          >
+            + Tambah Institusi
+          </button>
+        </div>
+
+        <div
+          class="table-responsive ms-3 me-3"
+          style="max-height: 450px; overflow-y: auto"
+        >
           <table class="table table-bordered">
-            <thead class="table-light">
+            <thead class="thead-telur-asin">
               <tr>
                 <th>No</th>
                 <th>Logo</th>
@@ -211,6 +181,202 @@
             <tbody id="tableInstitusi"></tbody>
           </table>
         </div>
+        <!-- FOOTER PAGINATION -->
+        <div
+          class="card-footer d-flex justify-content-between align-items-center"
+        >
+          <div id="infoData" class="text-muted"></div>
+          <div>
+            <button class="btn btn-outline-secondary btn-sm" id="prevBtn">
+              Previous
+            </button>
+            <button class="btn btn-outline-secondary btn-sm" id="nextBtn">
+              Next
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- MODAL TAMBAH INSTITUSI -->
+    <div
+      class="modal fade"
+      id="modalTambahInstitusi"
+      tabindex="-1"
+      aria-labelledby="modalTambahInstitusiLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-lg modal-dialog-scrollable">
+        <div class="modal-content">
+          <!-- HEADER -->
+          <div class="modal-header bg-dark text-white">
+            <h5 class="modal-title" id="modalTambahInstitusiLabel">
+              Tambah Institusi
+            </h5>
+            <button
+              type="button"
+              class="btn-close btn-close-white"
+              data-bs-dismiss="modal"
+            ></button>
+          </div>
+
+          <!-- BODY -->
+          <div class="modal-body">
+            <form id="formInstitusi">
+              <div class="row g-3">
+                <div class="col-md-6">
+                  <label class="form-label">Nama Institusi *</label>
+                  <input
+                    type="text"
+                    name="nama"
+                    class="form-control"
+                    required
+                  />
+                </div>
+
+                <div class="col-md-6">
+                  <label class="form-label">Link Terkait</label>
+                  <input
+                    type="text"
+                    name="link_terkait"
+                    class="form-control"
+                    placeholder="https://..."
+                  />
+                </div>
+
+                <div class="col-md-6">
+                  <label class="form-label">Upload Logo *</label>
+                  <input
+                    type="file"
+                    name="foto"
+                    class="form-control"
+                    accept="image/*"
+                    required
+                  />
+
+                  <img
+                    id="previewFoto"
+                    class="mt-2 border rounded"
+                    style="max-width: 150px; display: none; cursor: zoom-in"
+                  />
+                </div>
+              </div>
+            </form>
+          </div>
+
+          <!-- FOOTER -->
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Batal
+            </button>
+            <button type="submit" form="formInstitusi" class="btn btn-primary">
+              Simpan Institusi
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- MODAL EDIT INSTITUSI -->
+    <div
+      class="modal fade"
+      id="modalEditInstitusi"
+      tabindex="-1"
+      aria-labelledby="modalEditInstitusiLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-lg modal-dialog-scrollable">
+        <div class="modal-content">
+          <!-- HEADER -->
+          <div class="modal-header bg-dark text-white">
+            <h5 class="modal-title" id="modalEditInstitusiLabel">
+              Edit Institusi
+            </h5>
+            <button
+              type="button"
+              class="btn-close btn-close-white"
+              data-bs-dismiss="modal"
+            ></button>
+          </div>
+
+          <!-- BODY -->
+          <div class="modal-body">
+            <form id="formEditInstitusi">
+              <input type="hidden" id="edit_id" />
+
+              <div class="row g-3">
+                <div class="col-md-6">
+                  <label class="form-label">Nama Institusi *</label>
+                  <input
+                    type="text"
+                    id="edit_nama"
+                    name="nama"
+                    class="form-control"
+                    required
+                  />
+                </div>
+
+                <div class="col-md-6">
+                  <label class="form-label">Status</label>
+                  <select id="edit_status" name="status" class="form-control">
+                    <option value="1">Aktif</option>
+                    <option value="0">Nonaktif</option>
+                  </select>
+                </div>
+
+                <div class="col-md-12">
+                  <label class="form-label">Link Terkait</label>
+                  <input
+                    type="text"
+                    id="edit_link"
+                    name="link_terkait"
+                    class="form-control"
+                  />
+                </div>
+
+                <div class="col-md-6">
+                  <label class="form-label">Logo Baru (Opsional)</label>
+                  <input
+                    type="file"
+                    id="edit_foto"
+                    name="foto"
+                    class="form-control"
+                    accept="image/*"
+                  />
+
+                  <img
+                    id="edit_previewFoto"
+                    class="mt-2 border rounded"
+                    style="max-width: 150px; cursor: zoom-in"
+                    onclick="zoomEditInstitusiFoto()"
+                  />
+                </div>
+              </div>
+            </form>
+          </div>
+
+          <!-- FOOTER -->
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Batal
+            </button>
+            <button
+              type="submit"
+              form="formEditInstitusi"
+              class="btn btn-primary"
+            >
+              Simpan Perubahan
+            </button>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -218,8 +384,19 @@
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         const API = "http://localhost:5000/api/institusi?admin=1";
+
+        let allData = [];
+        let filteredData = [];
+        let currentPage = 1;
+        const rowsPerPage = 5;
+
         const tableBody = document.getElementById("tableInstitusi");
         const form = document.getElementById("formInstitusi");
+
+        const infoData = document.getElementById("infoData");
+        const prevBtn = document.getElementById("prevBtn");
+        const nextBtn = document.getElementById("nextBtn");
+        const searchInput = document.getElementById("searchInstitusi");
 
         // PREVIEW FOTO
         const fotoInput = form.querySelector('input[name="foto"]');
@@ -233,51 +410,125 @@
           }
         });
 
+        // =========================
         // LOAD DATA
+        // =========================
         async function loadInstitusi() {
-          const res = await fetch(API);
-          const data = await res.json();
+          try {
+            const res = await fetch(`${API}?admin=1`);
+            const json = await res.json();
 
-          tableBody.innerHTML = "";
-
-          data.forEach((item, index) => {
-            tableBody.innerHTML += `
-            <tr>
-              <td>${index + 1}</td>
-              <td>
-                  <img src="http://localhost:5000/uploads/institusi/${
-                    item.foto
-                  }" class="thumb-foto">
+            allData = Array.isArray(json) ? json : [];
+            applyFilter();
+          } catch (err) {
+            console.error(err);
+            tableBody.innerHTML = `
+              <tr>
+                <td colspan="6" class="text-center text-danger">
+                  Gagal memuat data institusi
                 </td>
-              <td>${item.nama}</td>
-              <td>
-                ${
-                  item.link_terkait
-                    ? `<a href="${item.link_terkait}" target="_blank">${item.link_terkait}</a>`
-                    : "-"
-                }
-              </td>
-              <td>
-                  <span class="badge bg-${
-                    item.status == 1 ? "success" : "secondary"
-                  }">
-                    ${item.status == 1 ? "Aktif" : "Nonaktif"}
-                  </span>
-                </td>
-              <td>
-                <button class="btn btn-warning btn-sm" onclick="window.location.href='editinstitusi.html?id=${
-                  item.id_institusi
-                }'">Edit</button>
-                <button class="btn btn-danger btn-sm" onclick="hapusInstitusi(${
-                  item.id_institusi
-                })">Hapus</button>
-              </td>
-            </tr>
-          `;
-          });
+              </tr>`;
+          }
         }
 
-        loadInstitusi();
+        // =========================
+        // FILTER + SEARCH
+        // =========================
+        function applyFilter() {
+          const keyword = searchInput.value.toLowerCase().trim();
+
+          filteredData = allData.filter(
+            (item) =>
+              !keyword ||
+              item.nama?.toLowerCase().includes(keyword) ||
+              item.link_terkait?.toLowerCase().includes(keyword)
+          );
+
+          currentPage = 1;
+          renderTable();
+        }
+
+        // LOAD TABLE
+        function renderTable() {
+          tableBody.innerHTML = "";
+
+          if (filteredData.length === 0) {
+            tableBody.innerHTML = `
+              <tr>
+                <td colspan="6" class="text-center text-muted">
+                  Data tidak ditemukan
+                </td>
+              </tr>`;
+            infoData.innerText = "Showing 0 entries";
+            prevBtn.disabled = nextBtn.disabled = true;
+            return;
+          }
+
+          const start = (currentPage - 1) * rowsPerPage;
+          const end = start + rowsPerPage;
+          const pageData = filteredData.slice(start, end);
+
+          pageData.forEach((item, index) => {
+            tableBody.innerHTML += `
+                <tr>
+                  <td>${index + 1}</td>
+                  <td>
+                      <img src="http://localhost:5000/uploads/institusi/${
+                        item.foto
+                      }" class="thumb-foto">
+                    </td>
+                  <td>${item.nama}</td>
+                  <td>
+                    ${
+                      item.link_terkait
+                        ? `<a href="${item.link_terkait}" target="_blank">${item.link_terkait}</a>`
+                        : "-"
+                    }
+                  </td>
+                  <td>
+                      <span class="badge bg-${
+                        item.status == 1 ? "success" : "secondary"
+                      }">
+                        ${item.status == 1 ? "Aktif" : "Nonaktif"}
+                      </span>
+                    </td>
+                  <td>
+                    <button class="btn btn-warning btn-sm" onclick="openEditInstitusi(${
+                      item.id_institusi
+                    })">
+                      Edit</button>
+                    <button class="btn btn-danger btn-sm" onclick="hapusInstitusi(${
+                      item.id_institusi
+                    })">Hapus</button>
+                  </td>
+                </tr>
+              `;
+          });
+          infoData.innerText = `Showing ${start + 1} to ${Math.min(
+            end,
+            filteredData.length
+          )} of ${filteredData.length} entries`;
+
+          prevBtn.disabled = currentPage === 1;
+          nextBtn.disabled = end >= filteredData.length;
+        }
+
+        // =========================
+        // PAGINATION
+        // =========================
+        prevBtn.onclick = () => {
+          if (currentPage > 1) {
+            currentPage--;
+            renderTable();
+          }
+        };
+
+        nextBtn.onclick = () => {
+          if (currentPage * rowsPerPage < filteredData.length) {
+            currentPage++;
+            renderTable();
+          }
+        };
 
         // CREATE
         form.addEventListener("submit", async (e) => {
@@ -285,20 +536,100 @@
 
           const formData = new FormData(form);
 
-          const res = await fetch(API, {
-            method: "POST",
-            body: formData,
-          });
+          try {
+            const res = await fetch(API, {
+              method: "POST",
+              body: formData,
+            });
 
-          const data = await res.json();
-          alert(data.message);
+            const data = await res.json();
+            alert(data.message);
 
-          if (res.ok) {
-            form.reset();
-            preview.style.display = "none";
-            loadInstitusi();
+            if (res.ok) {
+              form.reset();
+              preview.style.display = "none";
+
+              const modal = bootstrap.Modal.getInstance(
+                document.getElementById("modalTambahInstitusi")
+              );
+              if (modal) modal.hide();
+
+              loadInstitusi();
+            }
+          } catch (err) {
+            alert("Gagal menambahkan institusi");
+            console.error(err);
           }
         });
+
+        // =========================
+        // OPEN EDIT MODAL
+        // =========================
+        window.openEditInstitusi = async (id) => {
+          try {
+            const res = await fetch(
+              `http://localhost:5000/api/institusi/${id}`
+            );
+            const data = await res.json();
+
+            const institusi = Array.isArray(data) ? data[0] : data;
+            if (!institusi) {
+              alert("Data institusi tidak ditemukan");
+              return;
+            }
+
+            document.getElementById("edit_id").value = institusi.id_institusi;
+            document.getElementById("edit_nama").value = institusi.nama;
+            document.getElementById("edit_link").value =
+              institusi.link_terkait || "";
+            document.getElementById("edit_status").value = String(
+              institusi.status
+            );
+
+            document.getElementById(
+              "edit_previewFoto"
+            ).src = `http://localhost:5000/uploads/institusi/${institusi.foto}`;
+
+            new bootstrap.Modal(
+              document.getElementById("modalEditInstitusi")
+            ).show();
+          } catch (err) {
+            alert("Gagal memuat data institusi");
+            console.error(err);
+          }
+        };
+
+        // =========================
+        // SUBMIT EDIT INSTITUSI
+        // =========================
+        document
+          .getElementById("formEditInstitusi")
+          .addEventListener("submit", async (e) => {
+            e.preventDefault();
+
+            const id = document.getElementById("edit_id").value;
+            const formData = new FormData(
+              document.getElementById("formEditInstitusi")
+            );
+
+            const res = await fetch(
+              `http://localhost:5000/api/institusi/${id}`,
+              {
+                method: "PUT",
+                body: formData,
+              }
+            );
+
+            const data = await res.json();
+            alert(data.message);
+
+            if (res.ok) {
+              bootstrap.Modal.getInstance(
+                document.getElementById("modalEditInstitusi")
+              ).hide();
+              loadInstitusi();
+            }
+          });
 
         // DELETE
         window.hapusInstitusi = async (id) => {
@@ -314,19 +645,12 @@
           loadInstitusi();
         };
 
-        // SEARCH
-        document
-          .getElementById("searchInstitusi")
-          .addEventListener("input", function () {
-            const keyword = this.value.toLowerCase();
-            const rows = document.querySelectorAll("#tableInstitusi tr");
+        // =========================
+        // EVENT
+        // =========================
+        searchInput.addEventListener("input", applyFilter);
 
-            rows.forEach((row) => {
-              row.style.display = row.innerText.toLowerCase().includes(keyword)
-                ? ""
-                : "none";
-            });
-          });
+        loadInstitusi();
       });
     </script>
     <script src="http://localhost:5000/static/admin_check.js"></script>
